--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -16,3 +16,7 @@ body {
   flex-direction: row;
   align-items: center;
 }
+
+.flex-one {
+  flex: 1;
+}
